add_executable(example1 example1.cpp)
add_executable(example2 example2.cpp)
add_executable(example3 example3.cpp)
add_executable(example4 example4.cpp)
add_executable(example5 example5.cpp)
add_executable(example6 example6.cpp)
add_executable(example7 example7.cpp)
add_executable(example8 example8.cpp)
add_executable(example10 example10.cpp)
add_executable(example11 example11.cpp)
add_executable(example13 example13.cpp)
add_executable(example14 example14.cpp)
add_executable(example15 example15.cpp)
add_executable(example16 example16.cpp)
add_executable(example17 example17.cpp)

if ( NOT ${CMAKE_CXX_STANDARD} EQUAL 98 )
  add_executable(example9 example9.cpp)
  add_executable(example12 example12.cpp)
endif()
